fix: give root lower z-index
giving root lower z index than basket's minus z-index value. because on
iphone the basket is not visible. This MAY fix it

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
     height: 100vh;
     overflow-x: hidden;
     overflow-y: hidden;
+    z-index: -100;
 }
 
 #tree {
